[project]
name = "ghostfolio"
authors = [
    {name = "Marcin Szymanski", email = "ms32035@gmail.com"},
]
description = "Python API client for Ghostfolio"
readme = "README.md"

requires-python = ">=3.10"

dependencies = [
    "requests"
]

version = "0.7.0"

[project.urls]
Homepage = "https://github.com/ms32035/ghostfolio-py"

[project.scripts]
generate-docs = "scripts.generate_docs:main"

[dependency-groups]
dev = [
    "pdoc3>=0.11.6",
]
